--- a/springbootkafkalearning/src/main/resources/application.properties
+++ b/springbootkafkalearning/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.consumer.bootstrap-servers=CSCO-W-PF2S50VK.cisco.com:9092
+spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
 spring.kafka.consumer.group-id=myGroup
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -10,7 +10,7 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 
 
 spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.producer.bootstrap-servers=CSCO-W-PF2S50VK.cisco.com:9092
+spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
